# hill-cache

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt
include/: def.h
include/replacers/: arc_replacer.h  cacheus_replacer.h  dlirs_replacer.h  drrip_replacer.h  efsw_cache_manager.h  efsw_replacer.h  hill_replacer.h  lfu_replacer.h  lirs_replacer.h  lrfu_replacer.h  lru_replacer.h  opt_replacer.h  replacer.h  s3fifo_replacer.h  srrip_replacer.h
include/util/: deque_dict.hpp  dynamic_decay_heap.h  dynamic_decay_lru.h  heap_dict.hpp  lazy_update_heap.h  link_list.h  lru_list.h  unittest_utils.h
scripts/: config.py
scripts/benchmark/: bench.py  memtier.py
scripts/prototype/: runner.py  runner_cache_cleaner.py  utils.py
scripts/trace/: trace_analyzer.py  trace_processor.py
src/: CMakeLists.txt  bench.cpp  proto.cpp
src/replacers/: arc_replacer.cpp  cacheus_replacer.cpp  dlirs_replacer.cpp  drrip_replacer.cpp  efsw_cache_manager.cpp  efsw_replacer.cpp  hill_replacer.cpp  lfu_replacer.cpp  lirs_replacer.cpp  lrfu_replacer.cpp  lru_replacer.cpp  opt_replacer.cpp  s3fifo_replacer.cpp  srrip_replacer.cpp
src/util/: dynamic_decay_heap.cpp  dynamic_decay_lru.cpp  lazy_update_heap.cpp  link_list.cpp  lru_list.cpp  unittest_utils.cpp
tests/: arc2_test.cpp  arc3_test.cpp
traces/: .gitignore  example.lis
